added linkedin badge

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="./assets/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Playfair+Display&display=swap" rel="stylesheet">
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
         <title>Heather Johnsick's Portfolio</title>
     </head>
 
     <body>
         <!--navigation-->
         <header>
-            <h1>Heather Johnsick's Development Portfolio</h1>
+            <h1>Heather Johnsick's <span id="portfolio">Development Portfolio</span></h1>
             <nav>
                 <ul>
                     <li>
@@ -42,8 +46,9 @@
             </section>
             <section id="contact">
                 <h2>Contact Me</h2>
-                <a href="https://www.linkedin.com/in/heather-johnsick/">LinkedIn</a>
-                <a href="mailto:hjohnsick@yahoo.com">Email</a>
+                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="heather-johnsick" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/heather-johnsick?trk=profile-badge"></a></div>
+              
+                <a href="mailto:hjohnsick@yahoo.com" target="_blank">Email: hjohnsick@yahoo.com</a>
             </section>
         </div>
 
