fixed about section

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">About Me</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
                         <a href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact Me</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -31,23 +31,34 @@
 
         <div class="content">
             <section id="about">
-                <img src="./assets/images/profile-pic.JPG" alt="Heather's face">
-                <h2>About Me</h2>
-                <p>My name is Heather Johnsick.  I am a former retail manager turned software engineer.  
-                    I completed an intense 3 month coding bootcamp through Grand Circus in Detroit, MI.  
-                    Where I learned the fundamentals of C#, ASP.NET, and MySQL.  I am currently employed as a software engineer at Rocket Mortage.  
-                    I work primarily in C#, but have some experience in Node.js, Typescript, and Nest.js.  I am currently enrolled in coding bootcamp through MSU where I am learning HTML, CSS, and JavaScript.
-                    In my spare time, I enjoy traveling, hiking, and kayaking.
-                </p>
+                <div class="left-container">
+                <div class="left-content">
+                    <img src="./assets/images/profile-pic.JPG" alt="Heather's face">
+                </div>
+              </div>
+              <div class="right-container">
+                  <div class="right-content">
+                    <h2>About</h2>
+                    <p>My name is Heather Johnsick.  I am a former retail manager turned software engineer.  
+                        I completed an intense 3 month coding bootcamp through Grand Circus in Detroit, MI.  
+                        Where I learned the fundamentals of C#, ASP.NET, and MySQL.  I am currently employed as a software engineer at Rocket Mortage.  
+                        I work primarily in C#, but have some experience in Node.js, Typescript, and Nest.js.  I am currently enrolled in coding bootcamp through MSU where I am learning HTML, CSS, and JavaScript.
+                        In my spare time, I enjoy traveling, hiking, and kayaking.</p>
+                  </div>
+              </div>
             </section>
             <section id="projects">
                 <h2>Projects</h2>
-                <img src="./assets/images/run-buddy.jpg" alt="Run-buddy website">
+                <div class="card">
+                    <h3>Run Buddy</h3>
+                    <p>HTML/CSS</p>
+                    <a href="https://hjohnsick.github.io/run-buddy/"><img src="./assets/images/run-buddy.jpg" alt="Run-buddy website">
+                </div>
             </section>
             <section id="contact">
-                <h2>Contact Me</h2>
+                <h2>Contact</h2>
                 <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="heather-johnsick" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/heather-johnsick?trk=profile-badge"></a></div>
-              
+                
                 <a href="mailto:hjohnsick@yahoo.com" target="_blank">Email: hjohnsick@yahoo.com</a>
             </section>
         </div>
