--- a/index.html
+++ b/index.html
@@ -40,19 +40,30 @@
                   <div class="right-content">
                     <h2>About</h2>
                     <p>My name is Heather Johnsick.  I am a former retail manager turned software engineer.  
-                        I completed an intense 3 month coding bootcamp through Grand Circus in Detroit, MI.  
-                        Where I learned the fundamentals of C#, ASP.NET, and MySQL.  I am currently employed as a software engineer at Rocket Mortage.  
-                        I work primarily in C#, but have some experience in Node.js, Typescript, and Nest.js.  I am currently enrolled in coding bootcamp through MSU where I am learning HTML, CSS, and JavaScript.
+                        I completed an intense 3 month coding bootcamp through Grand Circus in Detroit, MI, where I learned the fundamentals of C#, ASP.NET, and MySQL.  I am currently employed as a software engineer at Rocket Mortage.  
+                        I work primarily in C#, but have some experience in Typescript, and Nest.js.  I am currently enrolled in coding bootcamp through MSU where I am learning HTML, CSS, and JavaScript.
                         In my spare time, I enjoy traveling, hiking, and kayaking.</p>
                   </div>
               </div>
             </section>
             <section id="projects">
                 <h2>Projects</h2>
-                <div class="card">
-                    <h3>Run Buddy</h3>
-                    <p>HTML/CSS</p>
-                    <a href="https://hjohnsick.github.io/run-buddy/"><img src="./assets/images/run-buddy.jpg" alt="Run-buddy website">
+                <div class="project-cards">
+                    <div class="card">
+                        <h3>Run Buddy</h3>
+                        <a href="https://hjohnsick.github.io/run-buddy/"><img src="./assets/images/run-buddy.jpg" alt="Run-buddy website"></a>
+                        <p>HTML/CSS</p>
+                    </div>
+                    <div class="card">
+                        <h3>Coming Soon</h3>
+                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon banner"></a>
+                        <p>HTML/CSS/JavaScript</p>
+                    </div>
+                    <div class="card">
+                        <h3>Coming Soon</h3>
+                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon banner"></a>
+                        <p>HTML/CSS/JavaScript</p>
+                    </div>
                 </div>
             </section>
             <section id="contact">
