added media queries

--- a/index.html
+++ b/index.html
@@ -31,19 +31,13 @@
 
         <div class="content">
             <section id="about">
-                <div class="left-container">
-                <div class="left-content">
-                    <img src="./assets/images/profile-pic.JPG" alt="Heather's face">
-                </div>
-              </div>
+                        <img id="profile-pic" src="./assets/images/profile-pic.JPG" alt="Heather's face">
               <div class="right-container">
-                  <div class="right-content">
                     <h2>About</h2>
                     <p>My name is Heather Johnsick.  I am a former retail manager turned software engineer.  
                         I completed an intense 3 month coding bootcamp through Grand Circus in Detroit, MI, where I learned the fundamentals of C#, ASP.NET, and MySQL.  I am currently employed as a software engineer at Rocket Mortage.  
                         I work primarily in C#, but have some experience in Typescript, and Nest.js.  I am currently enrolled in coding bootcamp through MSU where I am learning HTML, CSS, and JavaScript.
                         In my spare time, I enjoy traveling, hiking, and kayaking.</p>
-                  </div>
               </div>
             </section>
             <section id="projects">
@@ -51,7 +45,7 @@
                 <div class="project-cards">
                     <div class="card">
                         <h3>Run Buddy</h3>
-                        <a href="https://hjohnsick.github.io/run-buddy/"><img src="./assets/images/run-buddy.jpg" alt="Run-buddy website"></a>
+                        <a href="https://hjohnsick.github.io/run-buddy/" target="_blank"><img src="./assets/images/run-buddy.jpg" alt="Run-buddy website"></a>
                         <p>HTML/CSS</p>
                     </div>
                     <div class="card">
@@ -68,11 +62,10 @@
             </section>
             <section id="contact">
                 <h2>Contact</h2>
-                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="heather-johnsick" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/heather-johnsick?trk=profile-badge"></a></div>
-                
-                <a href="mailto:hjohnsick@yahoo.com" target="_blank">Email: hjohnsick@yahoo.com</a>
+                <a href="mailto:hjohnsick@yahoo.com" target="_blank"><img src="./assets/images/email-removebg-preview.png" alt="Email Icon"></a>
+                <a href="https://github.com/hjohnsick" target="_blank"><img src="./assets/images/github-removebg-preview.png" alt="Github Icon"></a>
+                <a href="https://www.linkedin.com/in/heather-johnsick/" target="_blank"><img src="./assets/images/linkedIn-removebg-preview.png" alt="LinkedIn Icon"></a>
             </section>
         </div>
-
     </body>
 </html>
