fixed card layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     ></script>
     <title>Heather Johnsick's Portfolio</title>
   </head>
-   <!--navigation-->          
+  <!--navigation-->
   <nav
     class="navbar is-fixed-top is-danger"
     role="navigation"
@@ -84,60 +84,28 @@
       </section>
       <section id="projects">
         <h2>Projects</h2>
-        <div class="recipe-container">
-            <div id="recipe-column">
-                <div class="column is-4-tablet is-3-desktop">
-        <div class="card">
-            <div class="card-content">
-                <p class="title is-size-5 has-text-centered">Run-buddy</p>
-            </div>
-            <div class="card-image has-text-centered px-6">
-                <a href="https://hjohnsick.github.io/run-buddy/" target="_blank"
-                ><img src="./assets/images/run-buddy.jpg" alt="Run-buddy website"
-              /></a>
-            <div class="top-right is-size-1-mobile"></div>
-            </div>
-            <footer class="card-footer">
-                <p class="card-footer-item">
+        <div class="project-container">
+          <div id="project-column">
+            <div class="column is-4-tablet is-3-desktop">
+              <div class="card">
+                <div class="card-content has-text-centered">
+                    <p class="title is-size-5">Run-buddy</p>
+                  </div>
+                <div class="card-image has-text-centered px-6">
+                    <a href="https://hjohnsick.github.io/run-buddy/" target="_blank">
+                        <img src="./assets/images/run-buddy.jpg" alt="Run-buddy website"/>
+                    </a>
+                </div>
+                <footer class="card-footer">
+                  <p class="card-footer-item">
                     HTML/CSS
-                </p>
-            </footer>
-        </div>
-    </div>
+                  </p>
+                </footer>
+              </div>
             </div>
-        </div>
-        <!-- <div class="project-cards">
-          <div class="card">
-            <h3>Run Buddy</h3>
-            <a href="https://hjohnsick.github.io/run-buddy/" target="_blank"
-              ><img src="./assets/images/run-buddy.jpg" alt="Run-buddy website"
-            /></a>
-            <p>HTML/CSS</p>
-          </div>
-          <div class="card">
-            <h3>Weather Dashboard</h3>
-            <a
-              href="https://hjohnsick.github.io/Weather-Dashboard/"
-              target="_blank"
-              ><img
-                src="./assets/images/weather-dashboard.PNG"
-                alt="Weather-Dashboard website"
-            /></a>
-            <p>HTML/CSS/JavaScript/JQuery</p>
-          </div>
-          <div class="card">
-            <h3>What's For Dinner?</h3>
-            <a
-              href="https://stahljohnmark.github.io/whatsfordinner/"
-              target="_blank"
-              ><img
-                src="./assets/images/whats-for-dinner.png"
-                alt="Whats for dinner website"
-            /></a>
-            <p>HTML/CSS/JavaScript/JQuery/Bulma</p>
           </div>
         </div>
-      </section> -->
+      </section>
       <section id="contact">
         <h2>Contact</h2>
         <a href="mailto:hjohnsick@yahoo.com" target="_blank"
