fixed formating on card

--- a/index.html
+++ b/index.html
@@ -85,26 +85,79 @@
       <section id="projects">
         <h2>Projects</h2>
         <div class="project-container">
-          <div id="project-column">
-            <div class="column is-4-tablet is-3-desktop">
+          <div
+            id="project-column"
+            class="columns mt-5 is-8 is-variable is-centered is-multiline"
+          >
+            <div class="column is-6-tablet is-5-desktop is-4-widescreen">
               <div class="card">
                 <div class="card-content has-text-centered">
-                    <p class="title is-size-5">Run-buddy</p>
-                  </div>
+                  <p class="title is-size-5">Run-buddy</p>
+                </div>
                 <div class="card-image has-text-centered px-6">
-                    <a href="https://hjohnsick.github.io/run-buddy/" target="_blank">
-                        <img src="./assets/images/run-buddy.jpg" alt="Run-buddy website"/>
-                    </a>
+                  <a
+                    href="https://hjohnsick.github.io/run-buddy/"
+                    target="_blank"
+                  >
+                    <img
+                      src="./assets/images/run-buddy.jpg"
+                      alt="Run-buddy website"
+                      class="img"
+                    />
+                  </a>
                 </div>
                 <footer class="card-footer">
-                  <p class="card-footer-item">
-                    HTML/CSS
-                  </p>
+                  <p class="card-footer-item">HTML/CSS</p>
                 </footer>
               </div>
             </div>
+            <div class="column is-6-tablet is-5-desktop is-4-widescreen">
+              <div class="card card-equal-height">
+                <div class="card-content has-text-centered">
+                  <p class="title is-size-5">Weather Dashboard</p>
+                </div>
+                <div class="card-image has-text-centered px-6">
+                  <a
+                    href="https://hjohnsick.github.io/Weather-Dashboard/"
+                    target="_blank"
+                  >
+                    <img
+                      src="./assets/images/weather-dashboard.PNG"
+                      alt="Weather Dashboard website"
+                      class="img"
+                    />
+                  </a>
+                </div>
+                <footer class="card-footer">
+                  <p class="card-footer-item">JavaScript/Jquery/HTML/CSS</p>
+                </footer>
+              </div>
+            </div>
+            <div class="column is-6-tablet is-5-desktop ">
+                <div class="card">
+                  <div class="card-content has-text-centered">
+                    <p class="title is-size-5">What's For Dinner?</p>
+                  </div>
+                  <div class="card-image has-text-centered px-6">
+                    <a
+                      href="https://stahljohnmark.github.io/whatsfordinner/"
+                      target="_blank"
+                    >
+                      <img
+                        src="./assets/images/whats-for-dinner.png"
+                        alt="What's for dinner website"
+                        class="img"
+                      />
+                    </a>
+                  </div>
+                  <footer class="card-footer">
+                    <p class="card-footer-item">JavaScript/JQuery/Bulma/HTML/CSS</p>
+                  </footer>
+                </div>
+              </div>
+            </div>
+            
           </div>
-        </div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
