--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </footer>
               </div>
             </div>
-            <div class="column is-6-tablet is-5-desktop ">
+            <div class="column is-6-tablet is-5-desktop is-4-widescreen">
                 <div class="card">
                   <div class="card-content has-text-centered">
                     <p class="title is-size-5">What's For Dinner?</p>
@@ -155,7 +155,19 @@
                   </footer>
                 </div>
               </div>
-            </div>
+              <div class="column is-6-tablet is-5-desktop is-4-widescreen">
+                <div class="card">
+                  <div class="card-content has-text-centered">
+                    <p class="title is-size-5">Coming Soon</p>
+                  </div>
+                  <div class="card-image has-text-centered px-6">
+                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon banner"></a>
+                  </div>
+                  <footer class="card-footer">
+                    <p class="card-footer-item">Node Js</p>
+                  </footer>
+                </div>
+              </div>
             
           </div>
       </section>
